--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "react-native-geocoding": "^0.4.0",
-    "react-native-geolocation-service": "^5.0.0"
+    "react-native-geocoding": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
